--- a/contato.css
+++ b/contato.css
@@ -33,6 +33,6 @@
     font-weight: 400;
     text-align: center;
     color: var(--azul);
-    background: url(../img/Email.svg)no-repeat;
+    background: url(../Email.svg)no-repeat;
     background-position: 1em;
 }
